--- a/assets/main.css
+++ b/assets/main.css
@@ -283,5 +283,17 @@ body {
   clip: auto !important;
 }
 
+@media only screen and (max-width: 480px){
+  .top-link{
+    width: 50px;
+    height: 50px;
+    margin: 0 1.5em 1.5em 0;
+  }
+  .top-link > svg{
+    width: 18px;
+    height: 9px;
+  }
+}
+
 
 /*# sourceMappingURL=main.css.map */
