--- a/assets/main.scss
+++ b/assets/main.scss
@@ -261,7 +261,6 @@ body {
 
 	&:hover {
 		background-color: #afaaaa;
-
 		svg {
 			fill: #000000;
 		}
@@ -297,3 +296,17 @@ body {
 		clip: auto !important;
 	}
 }
+
+@media only screen and (max-width: 480px){
+  .top-link{
+    width: 50px;
+    height: 50px;
+    margin: 0 1.5em 1.5em 0;
+  }
+  .top-link > svg{
+    width: 18px;
+    height: 9px;
+  }
+}
+
+
