--- a/assets/main.css
+++ b/assets/main.css
@@ -156,6 +156,101 @@ body {
   }
 }
 
+.courses__wrapper .search__field {
+  padding-bottom: 3em;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (max-width: 720px) {
+  .courses__wrapper .search__field {
+    margin-top: 80px;
+  }
+}
+
+.courses__wrapper .search__field .search__field__container {
+  position: relative;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.courses__wrapper .search__field .search__field__container .search__bar {
+  margin-right: 10px;
+  border: none;
+  border-bottom: 2px solid grey;
+  padding: 2px;
+  background: transparent;
+}
+
+.courses__wrapper .search__field .search__field__container .search__bar:focus {
+  outline: none;
+  border-bottom: 2px solid black;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.courses__wrapper .search__field .search__field__container .search__bar:focus ~ .placeholder {
+  top: -80%;
+  font-size: .9rem;
+  color: black;
+}
+
+.courses__wrapper .search__field .search__field__container .search__button {
+  font-size: 20px;
+  padding: 5px;
+  background: #9c4668;
+  color: white;
+  border-radius: 10%;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.courses__wrapper .search__field .search__field__container .search__button:active {
+  background: #642d43;
+}
+
+.courses__wrapper .search__field .search__field__container .placeholder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 1.2rem;
+  color: grey;
+  -webkit-transition: .3s;
+  transition: .3s;
+  pointer-events: none;
+}
+
+.courses__wrapper .search__field .all__courses {
+  display: none;
+  margin-top: 15px;
+  background: #9c4668;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.courses__wrapper .search__field .all__courses:active {
+  background: #642d43;
+}
+
 .courses__wrapper .courses__list {
   display: -ms-grid;
   display: grid;
@@ -189,8 +284,8 @@ body {
 
 @media screen and (max-width: 720px) {
   .courses__wrapper .courses__list .courses__card {
-    width: 100%;
-    margin: 1rem 0;
+    width: 90%;
+    margin: 1rem auto;
   }
 }
 
