--- a/assets/main.css
+++ b/assets/main.css
@@ -123,7 +123,7 @@ body {
     padding: 0;
   }
 }
-.courses__wrapper .courses__list {
+.courses__wrapper .courses__list  {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 }
@@ -215,6 +215,19 @@ body {
 }
 .filter__message--tagname {
   text-decoration: underline;
+}
+
+.search-courses {
+  padding-left: 30px;
+  padding-top: 20px;
+}
+
+.search-bar {
+  width: 300px;
+  height:40px;
+  border-width: 1px;
+  border-radius: 50px;
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
