--- a/assets/main.css
+++ b/assets/main.css
@@ -211,6 +211,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -222,6 +223,7 @@ body {
       -ms-flex: 0;
           flex: 0;
   margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
