--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,36 +25,36 @@ body {
     .navbar__logo {
         height: 60px;
     }
+}
 
-    a {
-        background: #9c4668;
-        padding: 0.25rem 1.5rem;
-        border-radius: 50px;
-        text-decoration: none;
-        color: white;
-        transition: all ease-in-out 250ms;
+.main-navbar__link {
+    background: #9c4668;
+    padding: 0.25rem 1.5rem;
+    border-radius: 50px;
+    text-decoration: none;
+    color: white;
+    transition: all ease-in-out 250ms;
 
-        h4 {
-            font-size: 1.1em;
-            font-weight: 500;
+    h4 {
+        font-size: 1.1em;
+        font-weight: 500;
+        &:before {
+            content: "Contribute on ";
+        }
+        @media screen and (max-width: 720px) {
             &:before {
-                content: "Contribute on ";
-            }
-            @media screen and (max-width: 720px) {
-                &:before {
-                    content: "";
-                }
-            }
-            i {
-                margin-left: 0.2rem;
+                content: "";
             }
         }
+        i {
+            margin-left: 0.2rem;
+        }
+    }
 
-        &:hover {
-            padding: 0.25rem 1.75rem;
-            font-size: 1.1em;
-            background: #444444;
-        }
+    &:hover {
+        padding: 0.25rem 1.75rem;
+        font-size: 1.1em;
+        background: #444444;
     }
 }
 
